--- a/EventBoardFrontEnd/src/main/java/ui/pages/AssociationHomePage.form
+++ b/EventBoardFrontEnd/src/main/java/ui/pages/AssociationHomePage.form
@@ -411,9 +411,9 @@
                     <Property name="verifyInputWhenFocusTarget" type="boolean" value="false"/>
                   </Properties>
                   <AuxValues>
-                    <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JTable(new AssociationsFeedTableModel(associationUpcomEveFeeds))"/>
-                    <AuxValue name="JavaCodeGenerator_CreateCodePre" type="java.lang.String" value="System.out.println(associationDetailsJSON.toString());&#xa;String associationUpcomEveUrl = &quot;http://localhost:9002/events/?type=associationUpcoming&amp;association_id=&quot;+associationDetailsJSON.get(&quot;association_id&quot;).toString();&#xa;RestAPIHook a = new RestAPIHook();&#xa;JSONObject associationUpcomEveData = a.invokeGetMethod(associationUpcomEveUrl);&#xa;Iterator&lt;String&gt; associationUpcomEveKeys = associationUpcomEveData.keys();&#xa;&#xa;List associationUpcomEveFeeds = new ArrayList();&#xa;while(associationUpcomEveKeys.hasNext()){&#xa;    String associationUpcomEveKey = associationUpcomEveKeys.next();&#xa;&#xa;    if(&quot;isSuccess&quot;.equals(associationUpcomEveKey)){&#xa;        continue;&#xa;    }&#xa;&#xa;    HashMap temp = new HashMap();&#xa;&#xa;    temp.put(&quot;event_id&quot;, associationUpcomEveKey);&#xa;    temp.put(&quot;isRendered&quot;,false);&#xa;    JSONObject val = associationUpcomEveData.getJSONObject(associationUpcomEveKey);&#xa;    Iterator&lt;String&gt; childKeys = val.keys();&#xa;    while(childKeys.hasNext()){&#xa;        String childKey = childKeys.next();&#xa;        temp.put(childKey, val.get(childKey));&#xa;    }&#xa;    System.out.println(&quot;Hi2&quot;);&#xa;    System.out.println(temp);&#xa;    System.out.println(&quot;Hi3&quot;);&#xa;    associationUpcomEveFeeds.add(new AssociationsFeed(temp));&#xa;&#xa;}"/>
-                    <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="//AssociationsFeedCell cell = new AssociationsFeedCell();&#xa;upcomingEventsTable.setDefaultRenderer(AssociationsFeed.class, new AssociationsFeedCell());&#xa;upcomingEventsTable.setDefaultEditor(AssociationsFeed.class, new AssociationsFeedCell());&#xa;upcomingEventsTable.setRowHeight(60);"/>
+                    <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JTable(new EventsFeedTableModel(feeds))"/>
+                    <AuxValue name="JavaCodeGenerator_CreateCodePre" type="java.lang.String" value="String url= &quot;http://localhost:9002/events/?type=associationUpcoming&amp;association_id=&quot;+ this.associationDetailsJSON.get(&quot;association_id&quot;).toString();&#xa;&#xa;RestAPIHook a = new RestAPIHook();&#xa;    JSONObject p = a.invokeGetMethod(url);&#xa;    Iterator&lt;String&gt; keys = p.keys();&#xa;    &#xa;    List feeds = new ArrayList();&#xa;    while(keys.hasNext()){&#xa;        String key = keys.next();&#xa;        &#xa;        if(&quot;isSuccess&quot;.equals(key)){&#xa;            continue;&#xa;        }&#xa;        &#xa;        HashMap temp = new HashMap();&#xa;        &#xa;        temp.put(&quot;event_id&quot;, key);&#xa;        JSONObject val = p.getJSONObject(key);&#xa;        Iterator&lt;String&gt; childKeys = val.keys();&#xa;        while(childKeys.hasNext()){&#xa;            String childKey = childKeys.next();&#xa;            temp.put(childKey, val.get(childKey));&#xa;        }&#xa;        temp.put(&quot;isRendered&quot;, false);&#xa;        temp.put(&quot;isFollow&quot;, true);&#xa;        temp.put(&quot;user_id&quot;, &quot;12&quot;);&#xa;        System.out.println(&quot;Hi2&quot;);&#xa;        System.out.println(temp);&#xa;        System.out.println(&quot;Hi3&quot;);&#xa;        feeds.add(new EventsFeed(temp));&#xa;    }&#xa;    System.out.println(&quot;Hi1&quot;);"/>
+                    <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="upcomingEventsTable.setDefaultRenderer(EventsFeed.class, new EventsFeedCell());&#xa;upcomingEventsTable.setDefaultEditor(EventsFeed.class, new EventsFeedCell());&#xa;upcomingEventsTable.setRowHeight(60);"/>
                   </AuxValues>
                 </Component>
               </SubComponents>
@@ -430,15 +430,56 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="1560" max="32767" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="333" max="-2" attributes="0"/>
+                      <Component id="jScrollPane3" min="-2" pref="1148" max="-2" attributes="0"/>
+                      <EmptySpace pref="79" max="32767" attributes="0"/>
+                  </Group>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="560" max="32767" attributes="0"/>
+                  <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace pref="69" max="32767" attributes="0"/>
+                      <Component id="jScrollPane3" min="-2" pref="466" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
+                  </Group>
               </Group>
             </DimensionLayout>
           </Layout>
+          <SubComponents>
+            <Container class="javax.swing.JScrollPane" name="jScrollPane3">
+              <AuxValues>
+                <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
+              </AuxValues>
+
+              <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
+              <SubComponents>
+                <Component class="javax.swing.JTable" name="pastEventsTable">
+                  <Properties>
+                    <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                      <Connection code="pastEventsTable.getModel()" type="code"/>
+                    </Property>
+                    <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+                      <Color id="Default Cursor"/>
+                    </Property>
+                    <Property name="focusable" type="boolean" value="false"/>
+                    <Property name="opaque" type="boolean" value="false"/>
+                    <Property name="requestFocusEnabled" type="boolean" value="false"/>
+                    <Property name="rowSelectionAllowed" type="boolean" value="false"/>
+                    <Property name="surrendersFocusOnKeystroke" type="boolean" value="true"/>
+                    <Property name="updateSelectionOnSort" type="boolean" value="false"/>
+                    <Property name="verifyInputWhenFocusTarget" type="boolean" value="false"/>
+                  </Properties>
+                  <AuxValues>
+                    <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JTable(new EventsFeedTableModel(feeds))"/>
+                    <AuxValue name="JavaCodeGenerator_CreateCodePre" type="java.lang.String" value="url= &quot;http://localhost:9002/events/?type=associationPast&amp;association_id=&quot;+ this.associationDetailsJSON.get(&quot;association_id&quot;).toString();&#xa;&#xa;a = new RestAPIHook();&#xa;    p = a.invokeGetMethod(url);&#xa;    keys = p.keys();&#xa;    &#xa;    feeds = new ArrayList();&#xa;    while(keys.hasNext()){&#xa;        String key = keys.next();&#xa;        &#xa;        if(&quot;isSuccess&quot;.equals(key)){&#xa;            continue;&#xa;        }&#xa;        &#xa;        HashMap temp = new HashMap();&#xa;        &#xa;        temp.put(&quot;event_id&quot;, key);&#xa;        JSONObject val = p.getJSONObject(key);&#xa;        Iterator&lt;String&gt; childKeys = val.keys();&#xa;        while(childKeys.hasNext()){&#xa;            String childKey = childKeys.next();&#xa;            temp.put(childKey, val.get(childKey));&#xa;        }&#xa;        temp.put(&quot;isRendered&quot;, false);&#xa;        temp.put(&quot;isFollow&quot;, true);&#xa;        temp.put(&quot;user_id&quot;, &quot;12&quot;);&#xa;        System.out.println(&quot;Hi2&quot;);&#xa;        System.out.println(temp);&#xa;        System.out.println(&quot;Hi3&quot;);&#xa;        feeds.add(new EventsFeed(temp));&#xa;    }&#xa;    System.out.println(&quot;Hi1&quot;);"/>
+                    <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="pastEventsTable.setDefaultRenderer(EventsFeed.class, new EventsFeedCell());&#xa;pastEventsTable.setDefaultEditor(EventsFeed.class, new EventsFeedCell());&#xa;pastEventsTable.setRowHeight(60);"/>
+                  </AuxValues>
+                </Component>
+              </SubComponents>
+            </Container>
+          </SubComponents>
         </Container>
         <Container class="javax.swing.JPanel" name="postEvePanel">
           <Constraints>
