--- a/EventBoardFrontEnd/src/main/java/ui/pages/AssociationHomePage.form
+++ b/EventBoardFrontEnd/src/main/java/ui/pages/AssociationHomePage.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
     <Container class="javax.swing.JFrame" name="jFrame1">
 
@@ -396,9 +396,6 @@
               <SubComponents>
                 <Component class="javax.swing.JTable" name="upcomingEventsTable">
                   <Properties>
-                    <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                      <Connection code="upcomingEventsTable.getModel()" type="code"/>
-                    </Property>
                     <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
                       <Color id="Default Cursor"/>
                     </Property>
@@ -411,9 +408,8 @@
                     <Property name="verifyInputWhenFocusTarget" type="boolean" value="false"/>
                   </Properties>
                   <AuxValues>
-                    <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JTable(new EventsFeedTableModel(feeds))"/>
-                    <AuxValue name="JavaCodeGenerator_CreateCodePre" type="java.lang.String" value="String url= &quot;http://localhost:9002/events/?type=associationUpcoming&amp;association_id=&quot;+ this.associationDetailsJSON.get(&quot;association_id&quot;).toString();&#xa;&#xa;RestAPIHook a = new RestAPIHook();&#xa;    JSONObject p = a.invokeGetMethod(url);&#xa;    Iterator&lt;String&gt; keys = p.keys();&#xa;    &#xa;    List feeds = new ArrayList();&#xa;    while(keys.hasNext()){&#xa;        String key = keys.next();&#xa;        &#xa;        if(&quot;isSuccess&quot;.equals(key)){&#xa;            continue;&#xa;        }&#xa;        &#xa;        HashMap temp = new HashMap();&#xa;        &#xa;        temp.put(&quot;event_id&quot;, key);&#xa;        JSONObject val = p.getJSONObject(key);&#xa;        Iterator&lt;String&gt; childKeys = val.keys();&#xa;        while(childKeys.hasNext()){&#xa;            String childKey = childKeys.next();&#xa;            temp.put(childKey, val.get(childKey));&#xa;        }&#xa;        temp.put(&quot;isRendered&quot;, false);&#xa;        temp.put(&quot;isFollow&quot;, true);&#xa;        temp.put(&quot;user_id&quot;, &quot;12&quot;);&#xa;        System.out.println(&quot;Hi2&quot;);&#xa;        System.out.println(temp);&#xa;        System.out.println(&quot;Hi3&quot;);&#xa;        feeds.add(new EventsFeed(temp));&#xa;    }&#xa;    System.out.println(&quot;Hi1&quot;);"/>
-                    <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="upcomingEventsTable.setDefaultRenderer(EventsFeed.class, new EventsFeedCell());&#xa;upcomingEventsTable.setDefaultEditor(EventsFeed.class, new EventsFeedCell());&#xa;upcomingEventsTable.setRowHeight(60);&#xa;&#xa;upcomingEventsTable.getColumnModel().getColumn(0).setHeaderValue(&quot;Upcoming Events&quot;);&#xa;upcomingEventsTable.getTableHeader().resizeAndRepaint();"/>
+                    <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="upcomingEventsTable();"/>
+                    <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
                   </AuxValues>
                 </Component>
               </SubComponents>
@@ -472,9 +468,8 @@
                     <Property name="verifyInputWhenFocusTarget" type="boolean" value="false"/>
                   </Properties>
                   <AuxValues>
-                    <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JTable(new EventsFeedTableModel(feeds))"/>
-                    <AuxValue name="JavaCodeGenerator_CreateCodePre" type="java.lang.String" value="url= &quot;http://localhost:9002/events/?type=associationPast&amp;association_id=&quot;+ this.associationDetailsJSON.get(&quot;association_id&quot;).toString();&#xa;&#xa;a = new RestAPIHook();&#xa;    p = a.invokeGetMethod(url);&#xa;    keys = p.keys();&#xa;    &#xa;    feeds = new ArrayList();&#xa;    while(keys.hasNext()){&#xa;        String key = keys.next();&#xa;        &#xa;        if(&quot;isSuccess&quot;.equals(key)){&#xa;            continue;&#xa;        }&#xa;        &#xa;        HashMap temp = new HashMap();&#xa;        &#xa;        temp.put(&quot;event_id&quot;, key);&#xa;        JSONObject val = p.getJSONObject(key);&#xa;        Iterator&lt;String&gt; childKeys = val.keys();&#xa;        while(childKeys.hasNext()){&#xa;            String childKey = childKeys.next();&#xa;            temp.put(childKey, val.get(childKey));&#xa;        }&#xa;        temp.put(&quot;isRendered&quot;, false);&#xa;        temp.put(&quot;isFollow&quot;, true);&#xa;        temp.put(&quot;user_id&quot;, &quot;12&quot;);&#xa;        System.out.println(&quot;Hi2&quot;);&#xa;        System.out.println(temp);&#xa;        System.out.println(&quot;Hi3&quot;);&#xa;        feeds.add(new EventsFeed(temp));&#xa;    }&#xa;    System.out.println(&quot;Hi1&quot;);"/>
-                    <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="pastEventsTable.setDefaultRenderer(EventsFeed.class, new EventsFeedCell());&#xa;pastEventsTable.setDefaultEditor(EventsFeed.class, new EventsFeedCell());&#xa;pastEventsTable.setRowHeight(60);"/>
+                    <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="pastEventsTable();"/>
+                    <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
                   </AuxValues>
                 </Component>
               </SubComponents>
