--- a/EventBoardFrontEnd/src/main/java/ui/pages/LoginPageNew.form
+++ b/EventBoardFrontEnd/src/main/java/ui/pages/LoginPageNew.form
@@ -194,6 +194,9 @@
               </Constraints>
             </Component>
             <Component class="javax.swing.JTextField" name="passwordTextField">
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JPasswordField()"/>
+              </AuxValues>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                   <AbsoluteConstraints x="730" y="270" width="210" height="-1"/>
