Minor UI fixes and fixed admin page profile panel error

--- a/EventBoardFrontEnd/src/main/java/ui/pages/AdminHomePage.form
+++ b/EventBoardFrontEnd/src/main/java/ui/pages/AdminHomePage.form
@@ -327,10 +327,8 @@
               <SubComponents>
                 <Component class="javax.swing.JTable" name="jTable1">
                   <AuxValues>
-                    <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="homePanel.revalidate();&#xa;//homeAdminButton.doClick();&#xa;adminHomeTable();"/>
-                    <AuxValue name="JavaCodeGenerator_CodeGeneration" type="java.lang.Integer" value="1"/>
-                    <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JTable(new AssociationsFeedTableModel(feeds))"/>
-                    <AuxValue name="JavaCodeGenerator_SerializeTo" type="java.lang.String" value="AdminHomePage_jTable1"/>
+                    <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="adminHomeTable();"/>
+                    <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="jTable1.setModel(jTable1.getModel());"/>
                     <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
                   </AuxValues>
                 </Component>
